:sparkles: Feat(main): Finalizando consumo de API na web.
